Replaced 100vh with 100% all around, fixed quote re-fetching on every collapse/expand of time details, made time details to occupy 1/3 of a screen

--- a/src/clock-screen/ClockScreen.module.css
+++ b/src/clock-screen/ClockScreen.module.css
@@ -1,5 +1,5 @@
 .main {
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 
@@ -29,7 +29,7 @@
 .timeScreen {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  flex-grow: 2;
 
   padding: 4vw 8vw;
 }
@@ -51,4 +51,12 @@
       calc(3rem + 2vw)
     );
   }
+}
+
+.hidden {
+  display: none;
+}
+
+.timeDetails {
+  flex-grow: 1;
 }
